ProjectFiles/gen/parser/MapParser.java
// Generated from /Users/kaicycle/bike-boy-does-school/CS410/Project1Group8/ProjectFiles/src/parser/MapParser.g4 by ANTLR 4.9.1
package parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MapParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WS=1, MAP_SECTION_START=2, MAP_CREATE_START=3, MAP_OR_REGION_DIMENSIONS=4, 
		MAP_CREATE_COLOUR=5, MAP_SECTION_END=6, DEF_SECTION_START=7, DEF_SECTION_END=8, 
		FUNCTION_SIGNATURE_START=9, FUNCTION_PARAM_START=10, FUNCTION_PARAM_SEP=11, 
		FUNCTION_PARAM_END=12, DEFINE_FEATURE_START=13, DEFINE_FEATURE_ICON=14, 
		DEFINE_FEATURE_SIZE=15, PLACE_AND_CALL_START=16, PLACE_AND_CALL_END=17, 
		PLACE_FEATURE_START=18, FEATURE_OR_REGION_NAME=19, FEATURE_OR_REGION_LOCATION=20, 
		PLACE_FEATURE_ON=21, FEATURE_OR_REGION_DISPLAY=22, PLACE_REGION_START=23, 
		FUNCTION_CALL_START=24, FUNCITON_CALL_PARAM_END=25, PLACE_STATEMENT_END=26, 
		TEXT=27, WS_TEXT=28, WS_TEXT_QUOTED_TEXT_MODE=29, OPENING_QUOTE=30, QUOTED_TEXT=31, 
		CLOSING_QUOTE=32, NUM=33, WS_NUM=34, WS_TUPLE=35, OPENING_BRACKET=36, 
		TUPLE_TEXT=37, TUPLE_SEP=38, CLOSING_BRACKET=39, COLOR_START=40, COLOR_CODE=41, 
		COLOR_END=42, WS_COLOR=43, REGION=44, WS_REGION=45, AREA_MAP=46, AREA_REGION=47, 
		WS_AREA=48, WS_BOOLEAN=49, BOOLEAN_START=50, BOOLEAN_TRUE=51, BOOLEAN_FALSE=52, 
		WS_FUNCTION_STATEMENT=53, FUNCTION_STATEMENT_NUM=54, SIGNATURE_END=55, 
		FUNCTION_STATEMENT_END_OF_LINE=56, FUNCTION_SIGNATURE_END=57, LOOP_START=58, 
		LOOP_END=59, LOOP_TEXT_SEP=60, LOOP_FROM=61, LOOP_TO=62, LOOP_INCREMENT=63, 
		LOOP_DECREMENT=64, IF_SIGNATURE_START=65, IF_END=66, ELSE_START=67, ELSE_END=68, 
		PLACE_FEATURE_START_FROM_FUNC=69, FEATURE_OR_REGION_NAME_FROM_FUNC=70, 
		FEATURE_OR_REGION_LOCATION_FROM_FUNC=71, PLACE_FEATURE_ON_FROM_FUNC=72, 
		FEATURE_OR_REGION_DISPLAY_FROM_FUNC=73, PLACE_REGION_START_FROM_FUNC=74, 
		PLACE_REGION_DIMENSIONS=75, ASSIGNMENT_START=76, ASSIGNMENT_EQUALS=77, 
		WS_FUNCTION_STATEMENT_TEXT=78, FUNCTION_STATEMENT_TEXT_TEXT=79, WS_FROM_FUNC_QUOTED_TEXT_MODE=80, 
		FROM_FUNC_OPENING_QUOTE=81, FROM_FUNC_QUOTED_TEXT=82, FROM_FUNC_CLOSING_QUOTE=83, 
		WS_FROM_FUNC_TUPLE=84, FROM_FUNC_OPENING_BRACKET=85, FROM_FUNC_TUPLE_TEXT=86, 
		FROM_FUNC_TUPLE_SEP=87, FROM_FUNC_CLOSING_BRACKET=88, WS_AREA_FROM_FUNC=89, 
		AREA_FROM_FUNC_MAP=90, AREA_FRM_FUNC_REGION=91, WS_BOOLEAN_FROM_FUNC=92, 
		BOOLEAN_FROM_FUNC_START=93, BOOLEAN_FROM_FUNC_TRUE=94, BOOLEAN_FROM_FUNC_FALSE=95, 
		WS_PLACE_REGION_FROM_FUNC=96, REGION_FROM_FUNC=97, WS_EXPRESSION=98, EXPRESSION_END=99, 
		MATH_COMPARE_START=100, MATH_COMPARE_COMPARISON_OP=101, QUOTE_COMPARE_START=102, 
		MATH_START=103, QUOTE_TEXT_START=104, EXPRESSION_TEXT=105, BOOLEAN_FROM_EXPRESSION_START=106, 
		WS_EXPRESSION_QUOTED_TEXT_FOR_VAR=107, EXPRESSION_OPENING_QUOTE_FOR_VAR=108, 
		EXPRESSION_QUOTED_TEXT_FOR_VAR=109, EXPRESSION_CLOSING_QUOTE_FOR_VAR=110, 
		WS_EXPRESSION_QUOTED_TEXT=111, EXPRESSION_OPENING_QUOTE=112, EXPRESSION_QUOTED_TEXT=113, 
		EXPRESSION_CLOSING_QUOTE=114, WS_MATH_FROM_EXPRESSION=115, MATH_FROM_EXPRESSION_START=116, 
		MATH_FROM_EXPRESSION_TEXT=117, MATH_FROM_EXPRESSION_OPERATORS=118, MATH_FROM_EXPRESSION_END=119, 
		WS_QUOTE_COMPARE_FROM_EXPRESSION=120, QUOTE_COMPARE_FROM_EXPRESSION_QUOTED_TEXT=121, 
		QUOTE_COMPARE_FROM_EXPRESSION_CLOSING_QUOTE=122, WS_SECOND_QUOTE_COMPARE_FROM_EXPRESSION=123, 
		QUOTE_COMPARISON_OP_FROM_EXPRESSION=124, SECOND_QUOTE_COMPARE_FROM_EXPRESSION_OPENING_QUOTE=125, 
		SECOND_QUOTE_COMPARE_FROM_EXPRESSION_QUOTED_TEXT=126, SECOND_QUOTE_COMPARE_FROM_EXPRESSION_CLOSING_QUOTE=127, 
		WS_BOOLEAN_FROM_EXPRESSION=128, BOOLEAN_FROM_EXPRESSION_TRUE=129, BOOLEAN_FROM_EXPRESSION_FALSE=130, 
		WS_COMPARISON=131, MATH_COMPARE_FROM_IF_START=132, MATH_COMPARE_FROM_IF_COMPARISON_OP=133, 
		QUOTE_COMPARE_FROM_IF_START=134, COMPARISON_FROM_IF_END=135, WS_MATH_FROM_IF=136, 
		MATH_FROM_IF_START=137, MATH_FROM_IF_TEXT=138, MATH_FROM_IF_OPERATORS=139, 
		MATH_FROM_IF_END=140, WS_QUOTE_COMPARE_FROM_IF=141, QUOTE_COMPARE_FROM_IF_QUOTED_TEXT=142, 
		QUOTE_COMPARE_FROM_IF_CLOSING_QUOTE=143, WS_SECOND_QUOTE_COMPARE_FROM_IF=144, 
		QUOTE_COMPARISON_OP_FROM_IF=145, SECOND_QUOTE_COMPARE_FROM_IF_OPENING_QUOTE=146, 
		SECOND_QUOTE_COMPARE_FROM_IF_QUOTED_TEXT=147, SECOND_QUOTE_COMPARE_FROM_IF_CLOSING_QUOTE=148;
	public static final int
		RULE_program = 0, RULE_map = 1, RULE_def = 2, RULE_place_and_call = 3, 
		RULE_function = 4, RULE_function_start = 5, RULE_function_end = 6, RULE_loop = 7, 
		RULE_loop_start = 8, RULE_loop_end = 9, RULE_conditional = 10, RULE_if_start = 11, 
		RULE_else_start = 12, RULE_else_end = 13, RULE_if_end = 14, RULE_comparison_if = 15, 
		RULE_math_compare_if = 16, RULE_quote_compare_if = 17, RULE_math_if = 18, 
		RULE_math_op_if = 19, RULE_function_statement = 20, RULE_place_statement = 21, 
		RULE_create_map = 22, RULE_place_region = 23, RULE_define_feature = 24, 
		RULE_place_feature = 25, RULE_function_call = 26, RULE_assignment = 27, 
		RULE_place_feature_from_func = 28, RULE_xytuple_func = 29, RULE_quoted_text_func = 30, 
		RULE_area_func = 31, RULE_expression = 32, RULE_comparison_expressions = 33, 
		RULE_math_expression = 34, RULE_quoted_text_from_expression = 35, RULE_quoted_text_from_expression_second = 36, 
		RULE_quoted_text_for_var = 37, RULE_math_compare = 38, RULE_quote_compare = 39, 
		RULE_comparison_op = 40, RULE_math_comparison_op = 41, RULE_quote_comparison_op = 42, 
		RULE_math = 43, RULE_math_op = 44, RULE_area = 45, RULE_xytuple = 46, 
		RULE_quoted_text = 47, RULE_color = 48, RULE_boolean_antlr = 49, RULE_boolean_antlr_red = 50, 
		RULE_boolean_antlr_expression = 51;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "map", "def", "place_and_call", "function", "function_start", 
			"function_end", "loop", "loop_start", "loop_end", "conditional", "if_start", 
			"else_start", "else_end", "if_end", "comparison_if", "math_compare_if", 
			"quote_compare_if", "math_if", "math_op_if", "function_statement", "place_statement", 
			"create_map", "place_region", "define_feature", "place_feature", "function_call", 
			"assignment", "place_feature_from_func", "xytuple_func", "quoted_text_func", 
			"area_func", "expression", "comparison_expressions", "math_expression", 
			"quoted_text_from_expression", "quoted_text_from_expression_second", 
			"quoted_text_for_var", "math_compare", "quote_compare", "comparison_op", 
			"math_comparison_op", "quote_comparison_op", "math", "math_op", "area", 
			"xytuple", "quoted_text", "color", "boolean_antlr", "boolean_antlr_red", 
			"boolean_antlr_expression"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, "'#start map'", "'CREATE MAP'", null, "'WITH COLOR'", "'#end map'", 
			"'#start definitions'", "'#end definitions'", "'DEFINE FUNCTION'", "'('", 
			null, "'):'", "'DEFINE FEATURE'", "'WITH ICON'", "'WITH SIZE'", "'#start place and call'", 
			"'#end place and call'", null, null, null, null, null, null, "'CALL FUNCTION'", 
			"')'", null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, "'#'", null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, "'END FUNCTION;'", "'START LOOP'", 
			"'END LOOP'", null, "'FROM'", "'TO'", "'INCREMENT BY'", "'DECREMENT BY'", 
			"'$IF'", "'$END IF;'", "'$ELSE:'", "'$END ELSE;'", null, null, null, 
			null, null, null, null, "'%assign'", "'='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "WS", "MAP_SECTION_START", "MAP_CREATE_START", "MAP_OR_REGION_DIMENSIONS", 
			"MAP_CREATE_COLOUR", "MAP_SECTION_END", "DEF_SECTION_START", "DEF_SECTION_END", 
			"FUNCTION_SIGNATURE_START", "FUNCTION_PARAM_START", "FUNCTION_PARAM_SEP", 
			"FUNCTION_PARAM_END", "DEFINE_FEATURE_START", "DEFINE_FEATURE_ICON", 
			"DEFINE_FEATURE_SIZE", "PLACE_AND_CALL_START", "PLACE_AND_CALL_END", 
			"PLACE_FEATURE_START", "FEATURE_OR_REGION_NAME", "FEATURE_OR_REGION_LOCATION", 
			"PLACE_FEATURE_ON", "FEATURE_OR_REGION_DISPLAY", "PLACE_REGION_START", 
			"FUNCTION_CALL_START", "FUNCITON_CALL_PARAM_END", "PLACE_STATEMENT_END", 
			"TEXT", "WS_TEXT", "WS_TEXT_QUOTED_TEXT_MODE", "OPENING_QUOTE", "QUOTED_TEXT", 
			"CLOSING_QUOTE", "NUM", "WS_NUM", "WS_TUPLE", "OPENING_BRACKET", "TUPLE_TEXT", 
			"TUPLE_SEP", "CLOSING_BRACKET", "COLOR_START", "COLOR_CODE", "COLOR_END", 
			"WS_COLOR", "REGION", "WS_REGION", "AREA_MAP", "AREA_REGION", "WS_AREA", 
			"WS_BOOLEAN", "BOOLEAN_START", "BOOLEAN_TRUE", "BOOLEAN_FALSE", "WS_FUNCTION_STATEMENT", 
			"FUNCTION_STATEMENT_NUM", "SIGNATURE_END", "FUNCTION_STATEMENT_END_OF_LINE", 
			"FUNCTION_SIGNATURE_END", "LOOP_START", "LOOP_END", "LOOP_TEXT_SEP", 
			"LOOP_FROM", "LOOP_TO", "LOOP_INCREMENT", "LOOP_DECREMENT", "IF_SIGNATURE_START", 
			"IF_END", "ELSE_START", "ELSE_END", "PLACE_FEATURE_START_FROM_FUNC", 
			"FEATURE_OR_REGION_NAME_FROM_FUNC", "FEATURE_OR_REGION_LOCATION_FROM_FUNC", 
			"PLACE_FEATURE_ON_FROM_FUNC", "FEATURE_OR_REGION_DISPLAY_FROM_FUNC", 
			"PLACE_REGION_START_FROM_FUNC", "PLACE_REGION_DIMENSIONS", "ASSIGNMENT_START", 
			"ASSIGNMENT_EQUALS", "WS_FUNCTION_STATEMENT_TEXT", "FUNCTION_STATEMENT_TEXT_TEXT", 
			"WS_FROM_FUNC_QUOTED_TEXT_MODE", "FROM_FUNC_OPENING_QUOTE", "FROM_FUNC_QUOTED_TEXT", 
			"FROM_FUNC_CLOSING_QUOTE", "WS_FROM_FUNC_TUPLE", "FROM_FUNC_OPENING_BRACKET", 
			"FROM_FUNC_TUPLE_TEXT", "FROM_FUNC_TUPLE_SEP", "FROM_FUNC_CLOSING_BRACKET", 
			"WS_AREA_FROM_FUNC", "AREA_FROM_FUNC_MAP", "AREA_FRM_FUNC_REGION", "WS_BOOLEAN_FROM_FUNC", 
			"BOOLEAN_FROM_FUNC_START", "BOOLEAN_FROM_FUNC_TRUE", "BOOLEAN_FROM_FUNC_FALSE", 
			"WS_PLACE_REGION_FROM_FUNC", "REGION_FROM_FUNC", "WS_EXPRESSION", "EXPRESSION_END", 
			"MATH_COMPARE_START", "MATH_COMPARE_COMPARISON_OP", "QUOTE_COMPARE_START", 
			"MATH_START", "QUOTE_TEXT_START", "EXPRESSION_TEXT", "BOOLEAN_FROM_EXPRESSION_START", 
			"WS_EXPRESSION_QUOTED_TEXT_FOR_VAR", "EXPRESSION_OPENING_QUOTE_FOR_VAR", 
			"EXPRESSION_QUOTED_TEXT_FOR_VAR", "EXPRESSION_CLOSING_QUOTE_FOR_VAR", 
			"WS_EXPRESSION_QUOTED_TEXT", "EXPRESSION_OPENING_QUOTE", "EXPRESSION_QUOTED_TEXT", 
			"EXPRESSION_CLOSING_QUOTE", "WS_MATH_FROM_EXPRESSION", "MATH_FROM_EXPRESSION_START", 
			"MATH_FROM_EXPRESSION_TEXT", "MATH_FROM_EXPRESSION_OPERATORS", "MATH_FROM_EXPRESSION_END", 
			"WS_QUOTE_COMPARE_FROM_EXPRESSION", "QUOTE_COMPARE_FROM_EXPRESSION_QUOTED_TEXT", 
			"QUOTE_COMPARE_FROM_EXPRESSION_CLOSING_QUOTE", "WS_SECOND_QUOTE_COMPARE_FROM_EXPRESSION", 
			"QUOTE_COMPARISON_OP_FROM_EXPRESSION", "SECOND_QUOTE_COMPARE_FROM_EXPRESSION_OPENING_QUOTE", 
			"SECOND_QUOTE_COMPARE_FROM_EXPRESSION_QUOTED_TEXT", "SECOND_QUOTE_COMPARE_FROM_EXPRESSION_CLOSING_QUOTE", 
			"WS_BOOLEAN_FROM_EXPRESSION", "BOOLEAN_FROM_EXPRESSION_TRUE", "BOOLEAN_FROM_EXPRESSION_FALSE", 
			"WS_COMPARISON", "MATH_COMPARE_FROM_IF_START", "MATH_COMPARE_FROM_IF_COMPARISON_OP", 
			"QUOTE_COMPARE_FROM_IF_START", "COMPARISON_FROM_IF_END", "WS_MATH_FROM_IF", 
			"MATH_FROM_IF_START", "MATH_FROM_IF_TEXT", "MATH_FROM_IF_OPERATORS", 
			"MATH_FROM_IF_END", "WS_QUOTE_COMPARE_FROM_IF", "QUOTE_COMPARE_FROM_IF_QUOTED_TEXT", 
			"QUOTE_COMPARE_FROM_IF_CLOSING_QUOTE", "WS_SECOND_QUOTE_COMPARE_FROM_IF", 
			"QUOTE_COMPARISON_OP_FROM_IF", "SECOND_QUOTE_COMPARE_FROM_IF_OPENING_QUOTE", 
			"SECOND_QUOTE_COMPARE_FROM_IF_QUOTED_TEXT", "SECOND_QUOTE_COMPARE_FROM_IF_CLOSING_QUOTE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MapParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MapParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public MapContext map() {
			return getRuleContext(MapContext.class,0);
		}
		public DefContext def() {
			return getRuleContext(DefContext.class,0);
		}
		public Place_and_callContext place_and_call() {
			return getRuleContext(Place_and_callContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MapParserListener ) ((MapParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MapParserListener ) ((MapParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MapParserVisitor ) return ((MapParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			map();
			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DEF_SECTION_START) {
				{
				setState(105);
				def();
				}
			}

			setState(109);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PLACE_AND_CALL_START) {
				{
				setState(108);
				place_and_call();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MapContext extends ParserRuleContext {
		public TerminalNode MAP_SECTION_START() { return getToken(MapParser.MAP_SECTION_START, 0); }
		public Create_mapContext create_map() {
			return getRuleContext(Create_mapContext.class,0);
		}
		public TerminalNode MAP_SECTION_END() { return getToken(MapParser.MAP_SECTION_END, 0); }
		public MapContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_map; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MapParserListener ) ((MapParserListener)listener).enterMap(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MapParserListener ) ((MapParserListener)listener).exitMap(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MapParserVisitor ) return ((MapParserVisitor<? extends T>)visitor).visitMap(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MapContext map() throws RecognitionException {
		MapContext _localctx = new MapContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_map);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			match(MAP_SECTION_START);
			setState(112);
			create_map();
			setState(113);
			match(MAP_SECTION_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefContext extends ParserRuleContext {
		public TerminalNode DEF_SECTION_START() { return getToken(MapParser.DEF_SECTION_START, 0); }
		public TerminalNode DEF_SECTION_END() { return getToken(MapParser.DEF_SECTION_END, 0); }
		public List<FunctionContext> function() {
			return getRuleContexts(FunctionContext.class);
		}
		public FunctionContext function(int i) {
			return getRuleContext(FunctionContext.class,i);
		}
		public List<Define_featureContext> define_feature() {
			return getRuleContexts(Define_featureContext.class);
		}
		public Define_featureContext define_feature(int i) {
			return getRuleContext(Define_featureContext.class,i);
		}
		public DefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_def; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MapParserListener ) ((MapParserListener)listener).enterDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MapParserListener ) ((MapParserListener)listener).exitDef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MapParserVisitor ) return ((MapParserVisitor<? extends T>)visitor).visitDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefContext def() throws RecognitionException {
		DefContext _localctx = new DefContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_def);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			match(DEF_SECTION_START);
			setState(118); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(118);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case FUNCTION_SIGNATURE_START:
					{
					setState(116);
					function();
					}
					break;
				case DEFINE_FEATURE_START:
					{
					setState(117);
					define_feature();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(120); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==FUNCTION_SIGNATURE_START || _la==DEFINE_FEATURE_START );
			setState(122);
			match(DEF_SECTION_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Place_and_callContext extends ParserRuleContext {
		public TerminalNode PLACE_AND_CALL_START() { return getToken(MapParser.PLACE_AND_CALL_START, 0); }
		public TerminalNode PLACE_AND_CALL_END() { return getToken(MapParser.PLACE_AND_CALL_END, 0); }
		public List<Place_statementContext> place_statement() {
			return getRuleContexts(Place_statementContext.class);
		}
		public Place_statementContext place_statement(int i) {
			return getRuleContext(Place_statementContext.class,i);
		}
		public Place_and_callContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_place_and_call; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MapParserListener ) ((MapParserListener)listener).enterPlace_and_call(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MapParserListener ) ((MapParserListener)listener).exitPlace_and_call(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MapParserVisitor ) return ((MapParserVisitor<? extends T>)visitor).visitPlace_and_call(this);
			else return visitor.visitChildren(this);
		}
	}
